Front-end + deploy

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,5 +8,6 @@
 <body>
 <h1>Bem-vindo à Argos!</h1>
 <a href="/produtos/listar">Ver Produtos</a>
+<a href="/clientes/listar">Ver Clientes</a>
 </body>
 </html>
