--- a/src/main/resources/templates/clientes/listar.html
+++ b/src/main/resources/templates/clientes/listar.html
@@ -20,6 +20,7 @@
   </tr>
   </thead>
   <tbody>
+  <a href="/index">voltar</a>
   <tr th:each="cliente : ${clientes}">
     <td th:text="${cliente.id}">ID</td>
     <td th:text="${cliente.nome}">Nome</td>
