--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>Argos Produtos</title>
+    <title>Argos - Página Inicial</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
