--- a/src/main/resources/templates/produtos/listar.html
+++ b/src/main/resources/templates/produtos/listar.html
@@ -20,6 +20,7 @@
   </tr>
   </thead>
   <tbody>
+  <a href="/index">Voltar</a>
   <tr th:each="produto : ${produtos}">
     <td th:text="${produto.id}">ID</td>
     <td th:text="${produto.nome}">Nome</td>
