--- a/src/main/resources/templates/clientes/adicionar.html
+++ b/src/main/resources/templates/clientes/adicionar.html
@@ -6,6 +6,7 @@
     <title>Adicionar Cliente</title>
 </head>
 <body>
+<a href="/clientes/listar">voltar</a>
 <h1>Adicionar Novo Cliente</h1>
 <form th:action="@{/clientes}" method="post">
     <label for="nome">Nome:</label>
