--- a/src/main/resources/templates/produtos/adicionar.html
+++ b/src/main/resources/templates/produtos/adicionar.html
@@ -6,6 +6,7 @@
   <title>Adicionar Produto</title>
 </head>
 <body>
+<a href="/produtos/listar">Voltar</a>
 <h1>Adicionar Novo Produto</h1>
 <form th:action="@{/produtos}" method="post">
   <label for="nome">Nome:</label>
