--- a/src/main/resources/templates/produtos/editar.html
+++ b/src/main/resources/templates/produtos/editar.html
@@ -6,6 +6,7 @@
   <title>Editar Produto</title>
 </head>
 <body>
+<a href="/produtos/listar">Voltar</a>
 <h1>Editar Produto</h1>
 <form th:action="@{/produtos/{id}(id=${produto.id})}" method="post">
   <input type="hidden" th:value="${produto.id}" name="id"/>
