--- a/src/main/resources/templates/clientes/adicionar.html
+++ b/src/main/resources/templates/clientes/adicionar.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Adicionar Cliente</title>
+    <title th:text="#{title.add_client}">Adicionar Cliente</title>
 </head>
 <body>
-<a href="/clientes/listar">voltar</a>
-<h1>Adicionar Novo Cliente</h1>
+<a th:href="@{/clientes/listar}" th:text="#{link.back}">Voltar</a>
+<h1 th:text="#{title.add_client}">Adicionar Novo Cliente</h1>
 <form th:action="@{/clientes}" method="post">
-    <label for="nome">Nome:</label>
+    <label for="nome" th:text="#{label.name}">Nome:</label>
     <input type="text" id="nome" name="nome" required><br>
-    <label for="idade">Idade:</label>
+    <label for="idade" th:text="#{label.age}">Idade:</label>
     <input type="number" id="idade" name="idade" required><br>
-    <label for="cpf">CPF:</label>
+    <label for="cpf" th:text="#{label.cpf}">CPF:</label>
     <input type="text" id="cpf" name="cpf" required><br>
-    <label for="email">E-mail:</label>
+    <label for="email" th:text="#{label.email}">E-mail:</label>
     <input type="email" id="email" name="email" required><br>
-    <label for="celular">Celular:</label>
+    <label for="celular" th:text="#{label.phone}">Celular:</label>
     <input type="text" id="celular" name="celular" required><br>
-    <button type="submit">Salvar</button>
+    <button type="submit" th:text="#{button.save}">Salvar</button>
 </form>
 </body>
 </html>
