--- a/src/main/resources/templates/clientes/editar.html
+++ b/src/main/resources/templates/clientes/editar.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Editar Cliente</title>
+    <title th:text="#{title.edit_client}">Editar Cliente</title>
 </head>
 <body>
-<a href="/clientes/listar">Voltar</a>
-<h1>Editar Cliente</h1>
-<form th:action="@{/clientes/{id}(id=${cliente.id_cliente})}" method="post">
+<a th:href="@{/clientes/listar}" th:text="#{link.back}">Voltar</a>
+<h1 th:text="#{title.edit_client}">Editar Cliente</h1>
+<form th:action="@{/clientes/{id_cliente}(id_cliente=${cliente.id_cliente})}" method="post">
     <input type="hidden" th:value="${cliente.id_cliente}" name="id_cliente"/>
-    <label for="nome">Nome:</label>
+    <label for="nome" th:text="#{label.name}">Nome:</label>
     <input type="text" id="nome" name="nome" th:value="${cliente.nome}" required><br>
-    <label for="idade">Idade:</label>
+    <label for="idade" th:text="#{label.age}">Idade:</label>
     <input type="number" id="idade" name="idade" th:value="${cliente.idade}" required><br>
-    <label for="cpf">CPF:</label>
+    <label for="cpf" th:text="#{label.cpf}">CPF:</label>
     <input type="text" id="cpf" name="cpf" th:value="${cliente.cpf}" required><br>
-    <label for="email">E-mail:</label>
+    <label for="email" th:text="#{label.email}">E-mail:</label>
     <input type="email" id="email" name="email" th:value="${cliente.email}" required><br>
-    <label for="celular">Celular:</label>
+    <label for="celular" th:text="#{label.phone}">Celular:</label>
     <input type="text" id="celular" name="celular" th:value="${cliente.celular}" required><br>
-    <button type="submit">Atualizar</button>
+    <button type="submit" th:text="#{button.update}">Atualizar</button>
 </form>
 </body>
 </html>
