--- a/src/main/resources/templates/produtos/editar.html
+++ b/src/main/resources/templates/produtos/editar.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="">
+<html xmlns:th="http://www.thymeleaf.org" lang="pt">
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/css/styles.css">
-  <title>Editar Produto</title>
+  <title th:text="#{title.edit_product}">Editar Produto</title>
 </head>
 <body>
-<a href="/produtos/listar">Voltar</a>
-<h1>Editar Produto</h1>
+<a th:href="@{/produtos/listar}" th:text="#{link.back}">Voltar</a>
+<h1 th:text="#{title.edit_product}">Editar Produto</h1>
 <form th:action="@{/produtos/{id}(id=${produto.id})}" method="post">
   <input type="hidden" th:value="${produto.id}" name="id"/>
-  <label for="nome">Nome:</label>
+  <label for="nome" th:text="#{label.name}">Nome:</label>
   <input type="text" id="nome" name="nome" th:value="${produto.nome}" required><br>
-  <label for="descricao">Descrição:</label>
+  <label for="descricao" th:text="#{label.description}">Descrição:</label>
   <input type="text" id="descricao" name="descricao" th:value="${produto.descricao}" required><br>
-  <label for="preco">Preço:</label>
+  <label for="preco" th:text="#{label.price}">Preço:</label>
   <input type="number" step="0.01" id="preco" name="preco" th:value="${produto.preco}" required><br>
-  <label for="quantidade">Quantidade:</label>
+  <label for="quantidade" th:text="#{label.quantity}">Quantidade:</label>
   <input type="number" id="quantidade" name="quantidade" th:value="${produto.quantidade}" required><br>
-  <label for="imagem">URL da Imagem:</label>
+  <label for="imagem" th:text="#{label.image_url}">URL da Imagem:</label>
   <input type="url" id="imagem" name="imagem" th:value="${produto.imagem}" required><br>
-  <button type="submit">Atualizar</button>
+  <button type="submit" th:text="#{button.update}">Atualizar</button>
 </form>
 </body>
 </html>
