Mensageria com AMPQ

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,5 +9,7 @@
 <h1 th:text="#{welcome.message}">Bem-vindo à Argos!</h1>
 <a th:href="@{/produtos/listar}" th:text="#{link.view_products}">Ver Produtos</a>
 <a th:href="@{/clientes/listar}" th:text="#{link.view_clients}">Ver Clientes</a>
+<a th:href="@{/contact}" th:text="#{link.contact_page}">Fale Conosco</a>
+
 </body>
 </html>
