recomendação com IA

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
 <a th:href="@{/produtos/listar}" th:text="#{link.view_products}">Ver Produtos</a>
 <a th:href="@{/clientes/listar}" th:text="#{link.view_clients}">Ver Clientes</a>
 <a th:href="@{/contact}" th:text="#{link.contact_page}">Fale Conosco</a>
+<a th:href="@{/recommendationForm}">IAAAAAAA</a>
 
 </body>
 </html>
