--- a/src/main/resources/templates/recommendationForm.html
+++ b/src/main/resources/templates/recommendationForm.html
@@ -2,22 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="pt">
 <head>
   <meta charset="UTF-8">
-  <title>Recomendações de Produtos</title>
+  <title th:text="#{page.title}">Recomendações de Produtos</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<h1>Obtenha Recomendações de Produtos</h1>
+<h1 th:text="#{page.header}">Obtenha Recomendações de Produtos</h1>
 <form th:action="@{/recommendations}" method="get">
-  <label for="age">Idade:</label>
+  <label for="age" th:text="#{label.age}">Idade:</label>
   <input type="number" id="age" name="age" required><br>
 
-  <label for="sexo">Sexo:</label>
+  <label for="sexo" th:text="#{label.gender}">Sexo:</label>
   <select id="sexo" name="sexo" required>
-    <option value="masculino">Masculino</option>
-    <option value="feminino">Feminino</option>
+    <option value="masculino" th:text="#{gender.male}">Masculino</option>
+    <option value="feminino" th:text="#{gender.female}">Feminino</option>
   </select><br>
 
-  <button type="submit">Obter Recomendações</button>
+  <button type="submit" th:text="#{button.submit}">Obter Recomendações</button>
 </form>
 </body>
 </html>
