--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -16,7 +16,7 @@
     <input type="email" id="email" name="email" required><br>
 
     <label for="message" th:text="#{label.message}">Mensagem:</label>
-    <textarea id="message" name="message" required></textarea><br>
+    <textarea id="message" name="message" required class="message"></textarea><br>
 
     <button type="submit" th:text="#{button.send}">Enviar</button>
 </form>
