--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -186,3 +186,14 @@ body {
     font-size: 16px;
     font-weight: bold;
 }
+
+.message {
+    width: 100%;
+    height: 50%;
+}
+
+.logo-img {
+    width: 300px;
+    height: 300px;
+
+}
