--- a/src/main/resources/templates/produtos/editar.html
+++ b/src/main/resources/templates/produtos/editar.html
@@ -20,7 +20,7 @@
   <input type="number" id="quantidade" name="quantidade" th:value="${produto.quantidade}" required><br>
   <label for="imagem" th:text="#{label.image_url}">URL da Imagem:</label>
   <input type="url" id="imagem" name="imagem" th:value="${produto.imagem}" required><br>
-  <button type="submit" th:text="#{button.update}">Atualizar</button>
+  <button type="submit" th:text="#{button.save}">Atualizar</button>
 </form>
 </body>
 </html>
