--- a/src/main/resources/templates/produtos/form.html
+++ b/src/main/resources/templates/produtos/form.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/styles.css">
-    <title th:text="#{title.edit_client}">Editar Cliente</title>
+    <title th:text="#{title.edit_product}">Editar Produto</title>
 </head>
 <body>
-<a th:href="@{/clientes/listar}" th:text="#{link.back}">Voltar</a>
-<h1 th:text="#{title.edit_client}">Editar Cliente</h1>
-<form th:action="@{/clientes/{id_cliente}(id_cliente=${cliente.id_cliente})}" method="post">
-    <input type="hidden" th:value="${cliente.id_cliente}" name="id_cliente"/>
+<a th:href="@{/produtos/listar}" th:text="#{link.back}">Voltar</a>
+<h1 th:text="#{title.edit_product}">Editar Produto</h1>
+<form th:action="@{/produtos/salvar}" method="post">
+    <input type="hidden" th:value="${produto.id}" name="id"/>
+
     <label for="nome" th:text="#{label.name}">Nome:</label>
-    <input type="text" id="nome" name="nome" th:value="${cliente.nome}" required><br>
+    <input type="text" id="nome" name="nome" th:value="${produto.nome}" required><br>
 
-    <label for="idade" th:text="#{label.age}">Idade:</label>
-    <input type="number" id="idade" name="idade" th:value="${cliente.idade}" required><br>
+    <label for="descricao" th:text="#{label.description}">Descrição:</label>
+    <textarea id="descricao" name="descricao" required th:text="${produto.descricao}"></textarea><br>
 
-    <label for="cpf" th:text="#{label.cpf}">CPF:</label>
-    <input type="text" id="cpf" name="cpf" th:value="${cliente.cpf}" required><br>
+    <label for="preco" th:text="#{label.price}">Preço:</label>
+    <input type="number" step="0.01" id="preco" name="preco" th:value="${produto.preco}" required><br>
 
-    <label for="email" th:text="#{label.email}">E-mail:</label>
-    <input type="email" id="email" name="email" th:value="${cliente.email}" required><br>
+    <label for="quantidade" th:text="#{label.quantity}">Quantidade:</label>
+    <input type="number" id="quantidade" name="quantidade" th:value="${produto.quantidade}" required><br>
 
-    <label for="celular" th:text="#{label.phone}">Celular:</label>
-    <input type="text" id="celular" name="celular" th:value="${cliente.celular}" required><br>
+    <label for="imagem" th:text="#{label.image}">Imagem:</label>
+    <input type="text" id="imagem" name="imagem" th:value="${produto.imagem}"><br>
 
     <button type="submit" th:text="#{button.update}">Atualizar</button>
 </form>
